syntax = "proto3"; 
// replace namespace with your own
option csharp_namespace = "TestGrpcService1"; 
package WeatherForecast.v1; 
import "google/protobuf/timestamp.proto"; 

service WeatherForecasts { 
	rpc GetWeather (WeatherForecast) returns (WeatherReply); 
	  rpc GetWeatherStream (WeatherForecast) returns (stream WeatherReply);
} 

message WeatherReply { 
	repeated WeatherForecast forecasts = 1; 
} 

message WeatherForecast { 
	google.protobuf.Timestamp date = 1; 
	int32 temperatureC = 2; 
	string summary = 3; 
}
